--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@
 permalink:      /:year-:month-:day/:title
 
 # Setup
-title:          Tale
+title:          DigitHole
 paginate:       5
 baseurl:        ""
-url:            "https://chesterhow.github.io/tale"
+url:            "https://sihaozi61.github.io"
 
 # Assets
 sass:
@@ -17,9 +17,9 @@ markdown:       kramdown
 
 # About
 author:
-  name:         Chester How
-  url:          http://chester.how
-  email:        chesterhow@gmail.com
+  name:         Curio
+  url:          https://sihaozi61.github.io
+  email:        sihaozi61@163.com
 
 # Custom vars
 version:        3.4.1
